@@ -1,7 +1,6 @@
 package lia;
 
 import java.io.StringReader;
-import java.util.Arrays;
 import java.util.List;
 
 import lia.common.TestUtil;
@@ -20,13 +19,14 @@ import org.apache.lucene.search.highlight.Highlighter;
 import org.apache.lucene.search.highlight.QueryScorer;
 import org.apache.lucene.search.highlight.SimpleSpanFragmenter;
 import org.apache.lucene.search.highlight.TokenSources;
+import org.apache.lucene.store.Directory;
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class HighlightTest
 {
-  private static final List<String> FRAGMENTS = Arrays.asList(
+  private static final List<String> FRAGMENTS = List.of(
       "Tapestry in <B>Action</B>",
       "Ant in <B>Action</B>",
       "Lucene in <B>Action</B>, Second Edition",
@@ -50,26 +50,29 @@ public class HighlightTest
 
   @Test
   void testHits() throws Exception {
-    IndexReader indexReader = DirectoryReader.open(TestUtil.getBookIndexDirectory());
-    IndexSearcher searcher = new IndexSearcher(indexReader);
-    TermQuery query = new TermQuery(new Term("title", "action"));
-    TopDocs hits = searcher.search(query, 10);
+    try (Directory directory = TestUtil.getBookIndexDirectory();
+         IndexReader indexReader = DirectoryReader.open(directory)) {
 
-    QueryScorer scorer = new QueryScorer(query, "title");
-    Highlighter highlighter = new Highlighter(scorer);
-    highlighter.setTextFragmenter(new SimpleSpanFragmenter(scorer));
+      IndexSearcher searcher = new IndexSearcher(indexReader);
+      TermQuery query = new TermQuery(new Term("title", "action"));
+      TopDocs hits = searcher.search(query, 10);
 
-    Analyzer analyzer = new SimpleAnalyzer();
+      QueryScorer scorer = new QueryScorer(query, "title");
+      Highlighter highlighter = new Highlighter(scorer);
+      highlighter.setTextFragmenter(new SimpleSpanFragmenter(scorer));
 
-    for (ScoreDoc sd : hits.scoreDocs) {
-      Document doc = searcher.storedFields().document(sd.doc);
-      String title = doc.get("title");
+      Analyzer analyzer = new SimpleAnalyzer();
+      for (ScoreDoc sd : hits.scoreDocs) {
+        Document doc = searcher.storedFields().document(sd.doc);
+        String title = doc.get("title");
 
-      TokenStream stream = TokenSources.getTokenStream("title", indexReader.termVectors().get(sd.doc), title, analyzer,
-          highlighter.getMaxDocCharsToAnalyze() - 1);
+        TokenStream stream =
+            TokenSources.getTokenStream("title", indexReader.termVectors().get(sd.doc), title, analyzer,
+                highlighter.getMaxDocCharsToAnalyze() - 1);
 
-      String fragment = highlighter.getBestFragment(stream, title);
-      assertThat(FRAGMENTS).contains(fragment);
+        String fragment = highlighter.getBestFragment(stream, title);
+        assertThat(FRAGMENTS).contains(fragment);
+      }
     }
   }
 }
